[package]
name = "crypto-rs"
version = "0.2.0"
edition = "2021"

[lib]
name = "blocknet_crypto"
crate-type = ["cdylib", "staticlib"]

[dependencies]
curve25519-dalek = "4.1"
ed25519-dalek = "2.1"
rand = "0.8"
sha2 = "0.10"
bulletproofs = "5.0"
merlin = "3.0"
argon2 = "0.5"

[dev-dependencies]
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
